fix whitespace issues

--- a/style.css
+++ b/style.css
@@ -288,18 +288,18 @@ body {
         width: 16rem;
         border-radius: var(--spacing-200);
         position: absolute;
-        bottom: 6rem;
-        right: -4rem;
+        left: 100%;
+        bottom: 30%;
+        transform: translateX(-75%);
         padding: var(--spacing-200);
     }
 
     .share-toast::after {
         content: '';
         position: absolute;
-        width: 0rem;
-        height: 0rem;
         top: 100%;
-        right: 43%;
+        left: 50%;
+        transform: translateX(-25%);
         border-left: .8rem solid transparent;
         border-right: .8rem solid transparent;
         border-bottom: .8rem solid transparent;
@@ -316,7 +316,7 @@ body {
     }
     
     .card__body {
-        padding: var(--spacing-300) var(--spacing-300) var(--spacing-300) 0;
+        padding: var(--spacing-400) var(--spacing-400) var(--spacing-400) 0;
     }
 
     .card__feature-img {
@@ -324,17 +324,7 @@ body {
         object-position: center left;
     }
 
-    .share-toast {
-        width: 16rem;
-        border-radius: var(--spacing-200);
-        position: absolute;
-        bottom: 5rem;
-        right: -5.5rem;
-        padding: var(--spacing-200);
-    }
-
     .share-toast::after {
-        right: 46%;
+        transform: translateX(50%);
     }
-    
 }
